# opentoonz

./: how_to_build_linux.md
doc/: how_to_build_linux.md
plugins/blur/: CMakeLists.txt
plugins/geom/: CMakeLists.txt
plugins/multiplugin/: CMakeLists.txt
toonz/cmake/: FindLZO.cmake  FindSuperLU.cmake  FindTIFF.cmake
toonz/sources/: CMakeLists.txt
toonz/sources/colorfx/: CMakeLists.txt
toonz/sources/common/expressions/: tgrammar.cpp
toonz/sources/common/tapptools/: tenv.cpp  ttimer.cpp
toonz/sources/common/tgl/: tgl.cpp
toonz/sources/common/tiio/: movsettings.cpp
toonz/sources/image/: CMakeLists.txt  tiio.cpp
toonz/sources/include/: movsettings.h  tatomicvar.h  tfont.h  tgl.h  tmsgcore.h  tpersistset.h  tsound_t.h  tsystem.h
toonz/sources/sound/: CMakeLists.txt
toonz/sources/stdfx/: CMakeLists.txt  ino_line_blur.cpp
toonz/sources/t32bitsrv/: CMakeLists.txt
toonz/sources/tcleanupper/: CMakeLists.txt
toonz/sources/tcomposer/: CMakeLists.txt
toonz/sources/tconverter/: CMakeLists.txt
toonz/sources/tnzbase/: CMakeLists.txt
toonz/sources/tnzcore/: CMakeLists.txt
toonz/sources/tnzext/: CMakeLists.txt
toonz/sources/tnztools/: CMakeLists.txt
toonz/sources/toonz/: CMakeLists.txt  columncommand.cpp  filmstripcommand.cpp  insertfxpopup.cpp  main.cpp  sceneviewer.cpp  sceneviewerevents.cpp  vectorizerswatch.h
toonz/sources/toonzlib/: CMakeLists.txt  fxcommand.cpp  studiopalettecmd.cpp  txsheetexpr.cpp
toonz/sources/toonzqt/: CMakeLists.txt  keyframenavigator.cpp  rasterimagedata.cpp  schematicviewer.cpp  toonzqt.qrc
(+28 files in other folders)
